# rust_real_world

./: Cargo.toml
configuration/: base.yml  development.yml
src/application/: Cargo.toml  build.rs
src/application/src/: lib.rs  main.rs
src/application/src/grpc/: mod.rs
src/application/src/grpc/handlers/: user_handler.rs
src/application/src/grpc/proto/: user_proto.proto
src/cross_cutting/: Cargo.toml
src/cross_cutting/src/: environment_variables.rs  lib.rs  utils.rs
src/db/: Cargo.toml
src/db/src/: connection.rs  lib.rs
src/db/src/mongo/: mod.rs
src/db/src/mongo/datasource/: mod.rs  user_datasource_mongo.rs
src/db/src/repositories/: mod.rs  user_repository.rs
src/domain/: Cargo.toml
src/domain/src/: lib.rs
src/domain/src/entities/: user.rs
src/domain/src/errors/: error.rs  mod.rs
src/domain/src/repositories/: i_user_repository.rs  mod.rs
src/use_case/: Cargo.toml
src/use_case/src/: insert_user_usecase.rs  lib.rs
