[package]
name = "cross_cutting"
version = "0.1.0"
authors = ["Renato Neves <renato.eves@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = {version="0.3.1",features = ["tls"]}
domain = { package = "domain", path = "../domain" }