[package]
name = "domain"
version = "0.1.0"
authors = ["Renato Neves <renato.eves@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["serde", "v4"] }
async-trait = "0.1.42"
serde_json = "~1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version= "1", features = ["derive"] }