[package]
name = "use_case"
version = "0.1.0"
authors = ["Renato Neves <renato.eves@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { package = "domain", path = "../domain" }
async-trait = "0.1.42"
uuid = { version = "0.8", features = ["serde", "v4"] }